# gcp-vertex-ai-generative-ai

./: .dockerignore  .gitignore  BUILD.sh  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  ci.yml
docs/: CONTRIBUTING.md
examples/: chat.rs  list_models.rs
language/: CHANGELOG.md  Cargo.toml  build.rs
language/certs/: README
language/protos/google/ai/generativelanguage/v1beta2/: README
language/protos/google/api/: README
language/src/: auth.rs  lib.rs  test.rs
src/: lib.rs
