[package]
name = "gcp-vertex-ai-generative-ai"
version = "0.1.0"
description = "An async client library for GCP Vertex AI Generative models - Examples"
repository.workspace = true
license.workspace = true
publish.workspace = true
readme = "./README.md"
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[dev-dependencies]
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
gcp-vertex-ai-generative-language = { path = "./language", version = "0.1.0" }

[workspace]
members = ["language"]

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "An async client library for GCP Vertex AI Generative models."
authors = [ "Sebastien Soudan <sebastien.soudan@gmail.com>" ]
repository = "https://github.com/ssoudan/gcp-vertex-ai-generative-ai"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = true

keywords = ["gcp", "google-cloud", "generative-ai", "vertex-ai"]
categories = []
