[package]
name = "gcp-vertex-ai-generative-language"
version = "0.1.1"
description = "An async client library for GCP Vertex AI Generative models - Language"
repository.workspace = true
license.workspace = true
publish.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[features]
default = []
# unstable API - may change in future versions
unstable = []

[lib]
doctest = false

[dependencies]
tonic = { version = "0.10", features = ["tls"] }
prost = "0.12.1"
prost-types = "0.12.1"
tokio = "1.32.0"
tower-service = "0.3.2"
futures-util = "0.3.28"
thiserror = "1.0.48"

[build-dependencies]
tonic-build = { version = "0.10", features = ["prost"] }
prost-build = { version = "0.12.1" }

[dev-dependencies]
insta = { version = "1.31.0", features = ["json"] }
tokio-test = "0.4.3"
